--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Learn</title>
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/base.css">
-        <link rel="stylesheet" href="./css/learn.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="bola bola-pequena"></div>
-            <div class="bola bola-grande"></div>
-            <img src="./images/Learn.svg" alt="Aprendizado" class="imagem">
-            <h1 class="titulo">Learn</h1>
-            <p class="texto">Practice with real exercices and projects for your portfolio</p>
-            <ul>
-                <a href="learn.html"><li class="botoes ativo"></li></a>
-                <a href="code.html"><li class="botoes"></li></a>
-                <a href="collect.html"><li class="botoes"></li></a>
-            </ul>
-            <a class="btn" href="#">Get Started</a>
-        </div>
-    </body>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Walkthrough Screen</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/learn.css" id="style" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="ball little-circle"></div>
+      <div class="ball big-circle"></div>
+      <img src="./images/Learn.svg" alt="Learn" class="image" />
+      <h1 class="title">Learn</h1>
+      <p class="text">
+        Practice with real exercices and projects for your portfolio
+      </p>
+      <ul>
+        <a href="#"><li class="btns active"></li></a>
+        <a href="#"><li class="btns"></li></a>
+        <a href="#"><li class="btns"></li></a>
+      </ul>
+      <a class="btn" href="#">Get Started</a>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
